Fixed skills alignment

--- a/css/resume.css
+++ b/css/resume.css
@@ -54,7 +54,7 @@ body {
     padding: 3px 5px;
     white-space: nowrap;
     text-transform: capitalize;
-    margin: 5px;
+    margin: 0 5px 5px 0;
     display: inline-block;
 }
 
